--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Riyan Upcoming Shah Rukh Khan Team</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+        }
+        header {
+            background-color: #333;
+            color: white;
+            text-align: center;
+            padding: 1em 0;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 2em;
+            background-color: white;
+            border-radius: 5px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>Riyan Upcoming Shah Rukh Khan Team</h1>
+    </header>
+    <div class="container">
+        <h2>About Riyan</h2>
+        <p>Riyan is not just a regular team member; he's the embodiment of coolness. With his charismatic presence and dedication, Riyan brings a unique energy to our team that's hard to match. Whether it's solving complex problems or inspiring us with his creative ideas, Riyan always manages to keep things exciting. He's not just a team member; he's the definition of cool!</p>
+    </div>
+</body>
+</html>
 
