--- a/index.html
+++ b/index.html
@@ -25,6 +25,14 @@
             border-radius: 5px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
+        .container2 {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 2em;
+            background-color: black;
+            border-radius: 5px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
     </style>
 </head>
 <body>
@@ -34,7 +42,9 @@
     <div class="container">
         <h2>About Riyan</h2>
         <p>Riyan is not just a regular team member; he's the embodiment of coolness. With his charismatic presence and dedication, Riyan brings a unique energy to our team that's hard to match. Whether it's solving complex problems or inspiring us with his creative ideas, Riyan always manages to keep things exciting. He's not just a team member; he's the definition of cool!</p>
-    </div>
+    <div class="container2">
+        <h2 style="color: white">Rehanis also Cool</h2>
+        <p style="color: white">Rehan is a hardworking diligent </p>
 </body>
 </html>
 
