--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
         <h2 style="color: white">Rehanis also Cool</h2>
         <p style="color: white">Rehan is a hardworking diligent </p>
     </div>
+    <div class="container2">
+        <h2 style="color:white">Our pics of Rehan</h2>
+        <a href="brami.png"> </a>
+        <a href="fanaa.jpg"> </a>
+        <a href= "mamooty.jpg"> </a>
+        
+    </div>
 </body>
 </html>
 
