--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     </div>
     <div class="container2">
         <h2 style="color: white">Rehanis also Cool</h2>
-        <p style="color: white">Rehan is a hardworking diligent </p>
+        <p style="color: white">Rehan is a hardworking diligent man </p>
     </div>
     <div class="container2">
         <h2 style="color:white">Our pics of Rehan</h2>
