--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
     </div>
     <div class="container2">
         <h2 style="color:white">Our pics of Rehan</h2>
-        <a href="brami.png"> </a>
-        <a href="fanaa.jpg"> </a>
-        <a href= "mamooty.jpg"> </a>
+        <img src="brami.png"> </img>
+        <img src="fanaa.jpg"> </img>
+        <img src= "mamooty.jpg"> </img>
         
     </div>
 </body>
