--- a/index.html
+++ b/index.html
@@ -33,6 +33,14 @@
             border-radius: 5px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
+        .container3 {
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 2em;
+            background-color: red;
+            border-radius: 5px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
     </style>
 </head>
 <body>
@@ -53,6 +61,10 @@
         <img src="fanaa.jpg"> </img>
         <img src= "mamooty.jpg"> </img>
         
+    </div>
+    <div class="container3">
+        <h2 style="color:yellow">Glorious Leader</h2>
+        <img src="jason.jpg"> </img>
     </div>
 </body>
 </html>
