--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         
     </div>
     <div class="container3">
-        <h2 style="color:yellow">Glorious Leader</h2>
-        <img src="jason.jpg"> </img>
+        <h2 style="color:yellow">Glorious Leader </h2>
+        <img src="jason.jpg" width="800" length="auto"> </img>
     </div>
 </body>
 </html>
