--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     </div>
     <div class="container3">
         <h2 style="color:yellow">Glorious Leader </h2>
-        <img src="jason.jpg" width="800" length="auto"> </img>
+        <img src="jason.jpg" width="800" length="300"> </img>
     </div>
 </body>
 </html>
