--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
         .container3 {
-            
+            maxwidth: 800px;
             margin: 0 auto;
             padding: 2em;
             background-color: red;
