--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
     <div class="container2">
         <h2 style="color: white">Rehan is also Cool</h2>
         <p style="color: white">Rehan is a hardworking diligent man </p>
+        <button class="favorite styled" type="button">Rehan is hardworking</button>
     </div>
     <div class="container2">
         <h2 style="color:white">Our pics of Rehan</h2>
