Fixing the broke ass images

--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@
     </div>
     <div class="container2">
         <h2 style="color:white">Our pics of Rehan</h2>
-        <img src="brami.png"> </img>
-        <img src="fanaa.jpg"> </img>
-        <img src= "mamooty.jpg"> </img>
+        <img src="brami.png" alt="Broke ass can't afford internet"> </img>
+        <img src="fanaa.jpg" alt="Broke ass can't afford internet"> </img>
+        <img src= "mamooty.jpg" alt="Broke ass can't afford internet"> </img>
         
     </div>
     <div class="container3">
         <h2 style="color:yellow">Glorious Leader </h2>
-        <img src="jason.jpg" width="800" length="300"> </img>
+        <img src="jason.jpg" alt="Broke ass can't afford internet" height="400" width="800" > </img>
     </div>
 </body>
 </html>
