--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
         
     </div>
     <div class="container3">
-        <h2 style="color:yellow">Glorious Leader </h2>
-        <img src="jason.jpg" alt="Broke ass can't afford internet" height="700" width="600" > </img>
+        <h2 style="color:yellow" font_size=>Glorious Leader </h2>
+        <img src="jason.jpg" alt="Broke ass can't afford internet" height="400" width="600" > </img>
     </div>
 </body>
 </html>
