--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         }
         .container3 {
             maxwidth: 500px;
-            margin: 0 auto;
+            margin: 300px;
             padding: 2em;
             background-color: red;
             border-radius: 5px;
