--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
             border-radius: 5px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
+        .container4 {
+            maxwidth: 500px;
+            margin: 0 auto;
+            padding: 2em;
+            background-color: red;
+            border-radius: 5px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+        }
     </style>
 </head>
 <body>
@@ -56,7 +64,7 @@
         <p style="color: white">Rehan is a hardworking diligent man </p>
         <button class="favorite styled" type="button" onclick="alert('Of course you clicked it goofy')">Rehan is hardworking</button>
     </div>
-    <div class="container2">
+    <div class="container3">
         <h2 style="color:white">Our pics of Rehan</h2>
         <img src="brami.png" alt="Broke ass can't afford internet"> </img>
         <img src="fanaa.jpg" alt="Broke ass can't afford internet"> </img>
@@ -66,6 +74,10 @@
     <div class="container3">
         <h2 style="color:yellow">Glorious Leader </h2>
         <img src="jason.jpg" alt="Broke ass can't afford internet" height="700" width="600" > </img>
+    </div>
+    <div class="container4">
+        <h2 style="color: white">Grandmaster Vikram</h2>
+        <img scr="rehanwebsite.png" alt="Hello, welcome back to another chess tutorial, yes it is me Grandmaster Vikram Rahul Abshiek Pranav Rajesh"> </img>
     </div>
 </body>
 </html>
