--- a/index.html
+++ b/index.html
@@ -77,7 +77,8 @@
     </div>
     <div class="container4">
         <h2 style="color: white">Grandmaster Vikram</h2>
-        <img scr="rehanwebsite.png" alt="Hello, welcome back to another chess tutorial, yes it is me Grandmaster Vikram Rahul Abshiek Pranav Rajesh"> </img>
+        <img src="rehanwebsite.png" alt="Hello, welcome back to another chess tutorial, yes it is me Grandmaster Vikram Rahul Abshiek Pranav Rajesh"> </img>
+		<img src="dongyou2.png"> </img>
     </div>
 </body>
 </html>
