--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="filesforwebsite.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Riyan Upcoming Shah Rukh Khan Team</title>
+    <title>Team Tech Support</title>
     <style>
+        
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -15,6 +17,7 @@
             background-color: #333;
             color: white;
             text-align: center;
+            font-family: HALO3;
             padding: 1em 0;
         }
         .container {
@@ -44,11 +47,11 @@
     </style>
 </head>
 <body>
-    <header>
+    <header style="font-family: HALO3;">
         <h1>Riyan Upcoming Shah Rukh Khan Team</h1>
     </header>
     <div class="container">
-        <h2>About Riyan</h2>
+        <h2 style="font-family: HALO3; font-size: 70;">About Riyan</h2>
         <p>Riyan is not just a regular team member; he's the embodiment of coolness. With his charismatic presence and dedication, Riyan brings a unique energy to our team that's hard to match. Whether it's solving complex problems or inspiring us with his creative ideas, Riyan always manages to keep things exciting. He's not just a team member; he's the definition of cool!</p>
     </div>
     <div class="container2">
