--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-signin-client_id" content="125257763090-p5800112ordnelpe23i2lbkavunsv5vq.apps.googleusercontent.com.apps.googleusercontent.com">
     <title>Riyan Upcoming Shah Rukh Khan Team</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #ffffff;
         }
         header {
             background-color: #333;
@@ -34,10 +35,10 @@
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
         .container3 {
-            maxwidth: 800px;
+            max-width: 800px;
             margin: 0 auto;
             padding: 2em;
-            background-color: red;
+            background-color: rgb(174, 29, 29);
             border-radius: 5px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
@@ -56,11 +57,50 @@
         <p style="color: white">Rehan is a hardworking diligent man </p>
         <button class="favorite styled" type="button">Rehan is hardworking</button>
     </div>
-    <div class="container2">
-        <h2 style="color:white">Our pics of Rehan</h2>
-        <img src="brami.png" alt="Broke ass can't afford internet"> </img>
-        <img src="fanaa.jpg" alt="Broke ass can't afford internet"> </img>
-        <img src= "mamooty.jpg" alt="Broke ass can't afford internet"> </img>
+</div>
+<div class="container2">
+    <h2 style="color:white">Our pics of Rehan</h2>
+    <img src="brami.png" alt="Broke ass can't afford internet"> </img>
+    <img src="fanaa.jpg" alt="Broke ass can't afford internet"> </img>
+    <img src= "mamooty.jpg" alt="Broke ass can't afford internet"> </img>
+    <div id="g_id_onload"
+    data-client_id="125257763090-kad4a17muhdr70ujqfchq20e3fc30jl9.apps.googleusercontent.com"
+    data-context="signup"
+    data-ux_mode="popup"
+    data-callback="handleCredentialResponse"
+    data-auto_select="true"
+    data-itp_support="true">
+</div>
+
+<div class="g_id_signin"
+    data-type="standard"
+    data-shape="pill"
+    data-theme="filled_blue"
+    data-text="signup_with"
+    data-size="large"
+    data-logo_alignment="left">
+</div>
+<div id="g_id_onload"
+     data-client_id="125257763090-kad4a17muhdr70ujqfchq20e3fc30jl9.apps.googleusercontent.com"
+     data-callback="handleCredentialResponse">
+</div>
+<script>
+  function handleCredentialResponse(response) {
+     // decodeJwtResponse() is a custom function defined by you
+     // to decode the credential response.
+     const responsePayload = decodeJwtResponse(response.credential);
+
+     console.log("ID: " + responsePayload.sub);
+     console.log('Full Name: ' + responsePayload.name);
+     console.log('Given Name: ' + responsePayload.given_name);
+     console.log('Family Name: ' + responsePayload.family_name);
+     console.log("Image URL: " + responsePayload.picture);
+     console.log("Email: " + responsePayload.email);
+  }
+</script>
+</div>
+
+
         
     </div>
     <div class="container3">
