Sign in button works

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="google-signin-client_id" content="125257763090-p5800112ordnelpe23i2lbkavunsv5vq.apps.googleusercontent.com.apps.googleusercontent.com">
+    <script src="https://accounts.google.com/gsi/client" async></script>
     <title>Riyan Upcoming Shah Rukh Khan Team</title>
     <style>
         body {
@@ -63,27 +63,19 @@
     <img src="brami.png" alt="Broke ass can't afford internet"> </img>
     <img src="fanaa.jpg" alt="Broke ass can't afford internet"> </img>
     <img src= "mamooty.jpg" alt="Broke ass can't afford internet"> </img>
-    <div id="g_id_onload"
-    data-client_id="125257763090-kad4a17muhdr70ujqfchq20e3fc30jl9.apps.googleusercontent.com"
-    data-context="signup"
-    data-ux_mode="popup"
-    data-callback="handleCredentialResponse"
-    data-auto_select="true"
-    data-itp_support="true">
-</div>
-
-<div class="g_id_signin"
-    data-type="standard"
-    data-shape="pill"
-    data-theme="filled_blue"
-    data-text="signup_with"
-    data-size="large"
-    data-logo_alignment="left">
-</div>
-<div id="g_id_onload"
-     data-client_id="125257763090-kad4a17muhdr70ujqfchq20e3fc30jl9.apps.googleusercontent.com"
-     data-callback="handleCredentialResponse">
-</div>
+          <script src="https://accounts.google.com/gsi/client" async></script>
+          <div id="g_id_onload"
+              data-client_id="125257763090-kad4a17muhdr70ujqfchq20e3fc30jl9.apps.googleusercontent.com"
+              data-callback="handleCredentialResponse"
+              data-auto_prompt="false">
+          <div class="g_id_signin"
+              data-type="standard"
+              data-shape="pill"
+              data-theme="filled_blue"
+              data-text="signup_with"
+              data-size="large"
+              data-logo_alignment="left">
+         </div>
 <script>
   function handleCredentialResponse(response) {
      // decodeJwtResponse() is a custom function defined by you
