--- a/index.html
+++ b/index.html
@@ -5,7 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://accounts.google.com/gsi/client" async></script>
     <title>Riyan Upcoming Shah Rukh Khan Team</title>
+
     <style>
+        .container4 {
+  position: fixed; left: 10px; top: 10px;
+  background-color: #333;
+}
+
+.bar1, .bar2, .bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #ffffff;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+.change .bar1 {
+  transform: translate(0, 11px) rotate(-45deg);
+}
+
+.change .bar2 {opacity: 0;}
+
+.change .bar3 {
+  transform: translate(0, -11px) rotate(45deg);
+}
         body {
             font-family: Arial, sans-serif;
             margin: 0;
@@ -13,6 +36,7 @@
             background-color: #ffffff;
         }
         header {
+            max-height: 100px;
             background-color: #333;
             color: white;
             text-align: center;
@@ -45,9 +69,21 @@
     </style>
 </head>
 <body>
+    <script src="main.js"></script>
     <header>
         <h1>Riyan Upcoming Shah Rukh Khan Team</h1>
+        <script src="https://accounts.google.com/gsi/client" async></script> <div id="g_id_onload" data-client_id="125257763090-kad4a17muhdr70ujqfchq20e3fc30jl9.apps.googleusercontent.com" data-callback="handleCredentialResponse" data-auto_prompt="true"> <div class="g_id_signin" data-type="standard" data-shape="pill" data-theme="filled_blue" data-text="signup_with" data-size="large" data-logo_alignment="left"></div>
+        <div class="container4" onclick="myFunction(this)">
+            <div class="bar1"></div>
+            <div class="bar2"></div>
+            <div class="bar3"></div>
+          </div>
+          <div class="menubutton">
+            <div class=".bar1, .bar2, .bar3"></div>
+          </div>
+          </div>
     </header>
+    
     <div class="container">
         <h2>About Riyan</h2>
         <p>Riyan is not just a regular team member; he's the embodiment of coolness. With his charismatic presence and dedication, Riyan brings a unique energy to our team that's hard to match. Whether it's solving complex problems or inspiring us with his creative ideas, Riyan always manages to keep things exciting. He's not just a team member; he's the definition of cool!</p>
@@ -63,19 +99,7 @@
     <img src="brami.png" alt="Broke ass can't afford internet"> </img>
     <img src="fanaa.jpg" alt="Broke ass can't afford internet"> </img>
     <img src= "mamooty.jpg" alt="Broke ass can't afford internet"> </img>
-          <script src="https://accounts.google.com/gsi/client" async></script>
-          <div id="g_id_onload"
-              data-client_id="125257763090-kad4a17muhdr70ujqfchq20e3fc30jl9.apps.googleusercontent.com"
-              data-callback="handleCredentialResponse"
-              data-auto_prompt="false">
-          <div class="g_id_signin"
-              data-type="standard"
-              data-shape="pill"
-              data-theme="filled_blue"
-              data-text="signup_with"
-              data-size="large"
-              data-logo_alignment="left">
-         </div>
+
 <script>
   function handleCredentialResponse(response) {
      // decodeJwtResponse() is a custom function defined by you
