JS code seems to be unable to see the menu button as an actual button

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             background-color: #ffffff;
         }
         header {
+            position: static;
             max-height: 100px;
             background-color: #333;
             color: white;
