--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="stylesheet" href="filesforwebsite.css">
     <meta charset="UTF-8">
@@ -14,15 +15,17 @@
             padding: 0;
             background-color: #ffffff;
         }
+
         header {
             position: static;
             max-height: 100px;
             background-color: #333;
             color: white;
             text-align: center;
-            font-family: HALO3;
+            font-family: Halo;
             padding: 1em 0;
         }
+
         .container {
             max-width: 800px;
             margin: 0 auto;
@@ -31,6 +34,7 @@
             border-radius: 5px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
+
         .container2 {
             max-width: 800px;
             margin: 0 auto;
@@ -39,6 +43,7 @@
             border-radius: 5px;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
+
         .container3 {
             max-width: 800px;
             margin: 0 auto;
@@ -49,52 +54,61 @@
         }
     </style>
 </head>
+
 <body>
-    <script src="main.js"></script>
-    <header style="font-family: HALO3;">
-        <h1>Riyan Upcoming Shah Rukh Khan Team</h1>
-        <script src="https://accounts.google.com/gsi/client" async></script> <div id="g_id_onload" data-client_id="125257763090-kad4a17muhdr70ujqfchq20e3fc30jl9.apps.googleusercontent.com" data-callback="handleCredentialResponse" data-auto_prompt="true"> <div class="g_id_signin" data-type="standard" data-shape="pill" data-theme="filled_blue" data-text="signup_with" data-size="large" data-logo_alignment="left"></div>
-          </div>
-    </header>
     
+    <header style="font-family: Halo;">
+        <h1>Riyan Upcoming Shah Rukh Khan Team</h1>
+        <script src="https://accounts.google.com/gsi/client" async></script>
+        <div id="g_id_onload" data-client_id="125257763090-kad4a17muhdr70ujqfchq20e3fc30jl9.apps.googleusercontent.com"
+            data-callback="handleCredentialResponse" data-auto_prompt="true">
+            <div class="g_id_signin" data-type="standard" data-shape="pill" data-theme="filled_blue"
+                data-text="signup_with" data-size="large" data-logo_alignment="left"></div>
+        </div>
+        <script>
+            function handleCredentialResponse(response) {
+                // decodeJwtResponse() is a custom function defined by you
+                // to decode the credential response.
+                const responsePayload = decodeJwtResponse(response.credential);
+
+                console.log("ID: " + responsePayload.sub);
+                console.log('Full Name: ' + responsePayload.name);
+                console.log('Given Name: ' + responsePayload.given_name);
+                console.log('Family Name: ' + responsePayload.family_name);
+                console.log("Image URL: " + responsePayload.picture);
+                console.log("Email: " + responsePayload.email);
+            }
+        </script>
+        <script src="main.js"></script>
+    </header>
+
     <div class="container">
-        <h2 style="font-family: HALO3; font-size: 70;">About Riyan</h2>
-        <p>Riyan is not just a regular team member; he's the embodiment of coolness. With his charismatic presence and dedication, Riyan brings a unique energy to our team that's hard to match. Whether it's solving complex problems or inspiring us with his creative ideas, Riyan always manages to keep things exciting. He's not just a team member; he's the definition of cool!</p>
+        <h2 style="font-family: Halo; font-size: 70;">About Riyan</h2>
+        <p>Riyan is not just a regular team member; he's the embodiment of coolness. With his charismatic presence and
+            dedication, Riyan brings a unique energy to our team that's hard to match. Whether it's solving complex
+            problems or inspiring us with his creative ideas, Riyan always manages to keep things exciting. He's not
+            just a team member; he's the definition of cool!</p>
     </div>
     <div class="container2">
         <h2 style="color: white">Rehan is also Cool</h2>
         <p style="color: white">Rehan is a hardworking diligent man </p>
         <button class="favorite styled" type="button">Rehan is hardworking</button>
     </div>
-</div>
-<div class="container2">
-    <h2 style="color:white">Our pics of Rehan</h2>
-    <img src="brami.png" alt="Broke ass can't afford internet"> </img>
-    <img src="fanaa.jpg" alt="Broke ass can't afford internet"> </img>
-    <img src= "mamooty.jpg" alt="Broke ass can't afford internet"> </img>
-
-<script>
-  function handleCredentialResponse(response) {
-     // decodeJwtResponse() is a custom function defined by you
-     // to decode the credential response.
-     const responsePayload = decodeJwtResponse(response.credential);
-
-     console.log("ID: " + responsePayload.sub);
-     console.log('Full Name: ' + responsePayload.name);
-     console.log('Given Name: ' + responsePayload.given_name);
-     console.log('Family Name: ' + responsePayload.family_name);
-     console.log("Image URL: " + responsePayload.picture);
-     console.log("Email: " + responsePayload.email);
-  }
-</script>
-</div>
+    </div>
+    <div class="container2">
+        <h2 style="color:white">Our pics of Rehan</h2>
+        <img src="brami.png" alt="Broke ass can't afford internet"> </img>
+        <img src="fanaa.jpg" alt="Broke ass can't afford internet"> </img>
+        <img src="mamooty.jpg" alt="Broke ass can't afford internet"> </img>
+    </div>
 
 
-        
+
     </div>
     <div class="container3">
         <h2 style="color:yellow" font_size=>Glorious Leader </h2>
-        <img src="jason.jpg" alt="Broke ass can't afford internet" height="400" width="600" > </img>
+        <img src="jason.jpg" alt="Broke ass can't afford internet" height="400" width="600"> </img>
     </div>
 </body>
+
 </html>
