Added members page

--- a/index.html
+++ b/index.html
@@ -89,7 +89,12 @@
         <img src="mamooty.jpg" alt="Broke ass can't afford internet"> </img>
     </div>
 
-
+    <div class="w3-bar w3-black">
+        <a href="members.html" class="w3-bar-item w3-button">The Team</a>
+        <a href="#" class="w3-bar-item w3-button">Link 1</a>
+        <a href="#" class="w3-bar-item w3-button">Link 2</a>
+        <a href="#" class="w3-bar-item w3-button">Link 3</a>
+      </div>
 
     </div>
     <div class="container3">
