--- a/members.html
+++ b/members.html
@@ -53,3 +53,27 @@
             }
         </style>
     </head>
+    <body>
+        <header style="font-family: Halo;">
+            <h1>The Team</h1>
+            <script src="https://accounts.google.com/gsi/client" async></script>
+            <div id="g_id_onload" data-ux_mode="redirect" data-client_id="125257763090-kad4a17muhdr70ujqfchq20e3fc30jl9.apps.googleusercontent.com" data-login_uri="/dashboard/hegetsus/account.html"
+                data-callback="handleCredentialResponse" data-auto_prompt="true">
+                <div class="g_id_signin" data-type="standard" data-shape="pill" data-theme="filled_blue"
+                    data-text="signup_with" data-size="large" data-logo_alignment="left"></div>
+            </div>
+            <script src="login.js"></script>
+            <script src="main.js"></script>
+        </header>
+    
+        <div class="container">
+            <h2 style="font-family: Halo; font-size: 70;">Riyan Anosh</h2>
+            <p>Riyan is the Webmaster and team lead. He is profecient in HTML, Python, and knows how to host a website. He enjoys playing old-school video games and hanging out with his brother, Rehan Anosh.</p>
+        </div>
+        <div class="container2">
+            <h2 style="color: white">Rehan is also Cool</h2>
+            <p style="color: white">Rehan is a hardworking diligent man </p>
+            <button class="favorite styled" type="button">Rehan is hardworking</button>
+        </div>
+        </div>
+    </html>
