Added more member page

--- a/members.html
+++ b/members.html
@@ -68,12 +68,7 @@
     
         <div class="container">
             <h2 style="font-family: Halo; font-size: 70;">Riyan Anosh</h2>
+            <img src="riyan.png"> </img> 
             <p>Riyan is the Webmaster and team lead. He is profecient in HTML, Python, and knows how to host a website. He enjoys playing old-school video games and hanging out with his brother, Rehan Anosh.</p>
         </div>
-        <div class="container2">
-            <h2 style="color: white">Rehan is also Cool</h2>
-            <p style="color: white">Rehan is a hardworking diligent man </p>
-            <button class="favorite styled" type="button">Rehan is hardworking</button>
-        </div>
-        </div>
-    </html>
+        
