--- a/members.html
+++ b/members.html
@@ -68,7 +68,7 @@
     
         <div class="container">
             <h2 style="font-family: Halo; font-size: 70;">Riyan Anosh</h2>
-            <img src="riyan.png"> </img> 
+            <img src="riyan.png" height="300" width="200"> </img> 
             <p>Riyan is the Webmaster and team lead. He is profecient in HTML, Python, and knows how to host a website. He enjoys playing old-school video games and hanging out with his brother, Rehan Anosh.</p>
         </div>
         
