--- a/members.html
+++ b/members.html
@@ -71,4 +71,28 @@
             <img src="riyan.png" height="300" width="200"> </img> 
             <p>Riyan is the Webmaster and team lead. He is profecient in HTML, Python, and knows how to host a website. He enjoys playing old-school video games and hanging out with his brother, Rehan Anosh.</p>
         </div>
-        
+        <div class="container">
+            <h2 style="font-family: Halo; font-size: 70;">Rehan Mohammad</h2>
+            <img src="rehan.png" height="300" width="200"> </img> 
+            <p>Rehan is the tech support and facilitater. He knows HTML and some Python. He enjoys reading classics </p>
+        </div>
+        <div class="container">
+            <h2 style="font-family: Halo; font-size: 70;">Riyan Anosh</h2>
+            <img src="amaan.png" height="300" width="200"> </img> 
+            <p>Riyan is the Webmaster and team lead. He is profecient in HTML, Python, and knows how to host a website. He enjoys playing old-school video games and hanging out with his brother, Rehan Anosh.</p>
+        </div>
+        <div class="container">
+            <h2 style="font-family: Halo; font-size: 70;">Riyan Anosh</h2>
+            <img src="varin.png" height="300" width="200"> </img> 
+            <p>Riyan is the Webmaster and team lead. He is profecient in HTML, Python, and knows how to host a website. He enjoys playing old-school video games and hanging out with his brother, Rehan Anosh.</p>
+        </div>
+        <div class="container">
+            <h2 style="font-family: Halo; font-size: 70;">Riyan Anosh</h2>
+            <img src="rishan.png" height="300" width="200"> </img> 
+            <p>Riyan is the Webmaster and team lead. He is profecient in HTML, Python, and knows how to host a website. He enjoys playing old-school video games and hanging out with his brother, Rehan Anosh.</p>
+        </div>
+        <div class="container">
+            <h2 style="font-family: Halo; font-size: 70;">Riyan Anosh</h2>
+            <img src="jason.jpg" height="300" width="200"> </img> 
+            <p>Riyan is the Webmaster and team lead. He is profecient in HTML, Python, and knows how to host a website. He enjoys playing old-school video games and hanging out with his brother, Rehan Anosh.</p>
+        </div>
