The added hotbar

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
     <header style="font-family: Halo;">
         <h1>Riyan Upcoming Shah Rukh Khan Team</h1>
         <div class="w3-bar w3-black">
-            <a href="members.html" class="w3-bar-item w3-button">The Team</a>
-            <a href="#" class="w3-bar-item w3-button">Link 1</a>
-            <a href="#" class="w3-bar-item w3-button">Link 2</a>
-            <a href="#" class="w3-bar-item w3-button">Link 3</a>
+            <a href="members.html" class="w3-bar-item w3-button" style="color: white;">The Team</a>
+            <a href="index.html" class="w3-bar-item w3-button" style="color: white;">Home</a>
+            <a href="#" class="w3-bar-item w3-button" style="color: white;">Link 2</a>
+            <a href="#" class="w3-bar-item w3-button" style="color: white;">Link 3</a>
           </div>
         <script src="https://accounts.google.com/gsi/client" async></script>
         <div id="g_id_onload" data-ux_mode="redirect" data-client_id="125257763090-kad4a17muhdr70ujqfchq20e3fc30jl9.apps.googleusercontent.com" data-login_uri="/dashboard/hegetsus/account.html"
