--- a/members.html
+++ b/members.html
@@ -81,7 +81,7 @@
         <div class="container">
             <h2 style="font-family: Halo; font-size: 70;">Rehan Mohammad</h2>
             <img src="rehan.png" height="300" width="200"> </img> 
-            <p>Rehan is the tech support and facilitater. He knows HTML and some Python. He enjoys reading classics. Also an olymic pipe smoker </p>
+            <p>Rehan is the tech support and facilitater. He knows HTML and some Python. He enjoys reading classics. </p>
         </div>
         <div class="container">
             <h2 style="font-family: Halo; font-size: 70;">Amaan Mohammad</h2>
@@ -91,7 +91,7 @@
         <div class="container">
             <h2 style="font-family: Halo; font-size: 70;">Varin Adusunalli</h2>
             <img src="varin.png" height="300" width="200"> </img> 
-            <p>Varin is the current Front-End Developer and Decorator. He is skilled in C, Python, HTML, and other languages. He enjoys the movie intersteller, knows Muay Thai and boxing, loves football, and enjoys... French(ew)</p>
+            <p>Varin is the current Front-End Developer and Decorator. He is skilled in C, Python, HTML, and other languages. He enjoys the movie Intersteller, knows Muay Thai and boxing, loves football, and enjoys... French(ew)</p>
         </div>
         <div class="container">
             <h2 style="font-family: Halo; font-size: 70;">Rishaan Joshi</h2>
