Addition of projecs

--- a/members.html
+++ b/members.html
@@ -81,7 +81,7 @@
         <div class="container">
             <h2 style="font-family: Halo; font-size: 70;">Rehan Mohammad</h2>
             <img src="rehan.png" height="300" width="200"> </img> 
-            <p>Rehan is the tech support and facilitater. He knows HTML and some Python. He enjoys reading classics. </p>
+            <p>Rehan is the tech support and facilitater. He knows HTML and some Python. He enjoys reading classics, such as The Three Musketeers. He aslo enjoys playing sports such as Badminton and Basketball. He is the gigachad brother of Amaan, and carries this entire team on his back.  </p>
         </div>
         <div class="container">
             <h2 style="font-family: Halo; font-size: 70;">Amaan Mohammad</h2>
@@ -96,10 +96,10 @@
         <div class="container">
             <h2 style="font-family: Halo; font-size: 70;">Rishaan Joshi</h2>
             <img src="rishan.png" height="300" width="200"> </img> 
-            <p>Rishaan is one of the Content Specialists and the Entertainer. He has a bad sense of humor, is rather creative, has generally good ideas, and is a movie addict. He also believes Riyan is missing a chromosome and thinks he looks better bald.</p>
+            <p>Rishaan is one of the Content Specialists and the Entertainer. He has a bad sense of humor, is rather creative, has generally good ideas, and is a movie addict. He also believes Riyan is missing a chromosome and thinks he looks better bald. He also created our team logo.</p>
         </div>
         <div class="container">
             <h2 style="font-family: Halo; font-size: 70;">Jason Lai</h2>
             <img src="jason.png" height="300" width="200"> </img> 
-            <p>Jason is one of the Content Specialists and the Event Planner. He is experienced in Python, HTML, Lua, and knows a little bit of Java/C/C++. He enjoys swimming, badminton, and loves the Balkans dispite being Chinese. He can't read.</p>
+            <p>Jason is one of the Content Specialists and the Event Planner. He is experienced in Python, HTML, Lua, and knows a little bit of Java/C/C++. He enjoys swimming, badminton, and loves the Balkans despite being Chinese. He can't read.</p>
         </div>
