--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <div class="w3-bar w3-black">
             <a href="members.html" class="w3-bar-item w3-button" style="color: white;">The Team</a>
             <a href="index.html" class="w3-bar-item w3-button" style="color: white;">Home</a>
-            <a href="#" class="w3-bar-item w3-button" style="color: white;">Link 2</a>
+            <a href="projects.html" class="w3-bar-item w3-button" style="color: white;">Projects</a>
             <a href="#" class="w3-bar-item w3-button" style="color: white;">Link 3</a>
           </div>
         <script src="https://accounts.google.com/gsi/client" async></script>
