final of projects

--- a/projects.html
+++ b/projects.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://accounts.google.com/gsi/client" async></script>
-    <title>Team Tech Support</title>
+    <title>Projects</title>
 
     <style>
         body {
@@ -54,3 +54,22 @@
         }
     </style>
 </head>
+<body>
+    <header style="font-family: Halo;">
+        <h1>Our Projects</h1>
+        <script src="https://accounts.google.com/gsi/client" async></script>
+        <div id="g_id_onload" data-ux_mode="redirect" data-client_id="125257763090-kad4a17muhdr70ujqfchq20e3fc30jl9.apps.googleusercontent.com" data-login_uri="/dashboard/hegetsus/account.html"
+            data-callback="handleCredentialResponse" data-auto_prompt="true">
+            <div class="g_id_signin" data-type="standard" data-shape="pill" data-theme="filled_blue"
+                data-text="signup_with" data-size="large" data-logo_alignment="left"></div>
+        </div>
+        <script src="login.js"></script>
+        <script src="main.js"></script>
+        
+        <div class="w3-bar w3-black">
+            <a href="members.html" class="w3-bar-item w3-button" style="color: white;">The Team</a>
+            <a href="index.html" class="w3-bar-item w3-button" style="color: white;">Home</a>
+            <a href="projects.html" class="w3-bar-item w3-button" style="color: white;">Projects</a>
+            <a href="#" class="w3-bar-item w3-button" style="color: white;">Link 3</a>
+          </div>
+    </header>
