--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             padding: 2em;
             background-color: white;
             border-radius: 5px;
+            text-align: center;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
 
@@ -73,31 +74,12 @@
         <script src="login.js"></script>
         <script src="main.js"></script>
     </header>
-
     <div class="container">
-        <h2 style="font-family: Halo; font-size: 70;">About Riyan</h2>
-        <p>Riyan is not just a regular team member; he's the embodiment of coolness. With his charismatic presence and
-            dedication, Riyan brings a unique energy to our team that's hard to match. Whether it's solving complex
-            problems or inspiring us with his creative ideas, Riyan always manages to keep things exciting. He's not
-            just a team member; he's the definition of cool!</p>
-    </div>
-    <div class="container2">
-        <h2 style="color: white">Rehan is also Cool</h2>
-        <p style="color: white">Rehan is a hardworking diligent man </p>
-        <button class="favorite styled" type="button">Rehan is hardworking</button>
-    </div>
-    </div>
-    <div class="container2">
-        <h2 style="color:white">Our pics of Rehan</h2>
-        <img src="brami.png" alt="Broke ass can't afford internet"> </img>
-        <img src="fanaa.jpg" alt="Broke ass can't afford internet"> </img>
-        <img src="mamooty.jpg" alt="Broke ass can't afford internet"> </img>
+        <h2 style="font-family: Halo; font-size: 200;">Welcome to our team!</h2>
+        <img src="logo.jpeg" height="500" witdh="500"> </img>
+        <p> We are students under the guidance of Mr. Millard in AP Computer Science Principles. We hope to learn more about technology and gain valuable real life skills related to engineering while having fun! Thanks for dropping by, and I hope that you enjoy our website! </p>
+        <p2></p2>
+        <p3></p3>
     </div>
 
-    </div>
-    <div class="container3">
-        <h2 style="color:yellow" font_size=>Glorious Leader </h2>
-        <img src="jason.jpg" alt="Broke ass can't afford internet" height="400" width="600"> </img>
-    </div>
-</body>
-<html>
+    
