--- a/projects.html
+++ b/projects.html
@@ -32,6 +32,7 @@
             padding: 2em;
             background-color: white;
             border-radius: 5px;
+            text-align: center;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
         }
 
@@ -72,3 +73,9 @@
             <a href="projects.html" class="w3-bar-item w3-button" style="color: white;">Projects</a>
           </div>
     </header>
+    <div class="container">
+        <h2 style="font-family: Halo; font-size: 200;">COMING SOON!</h2>
+    </div>
+    <div class="container">
+        <img src="jason.jpg" height="300" width="200"> </img> 
+    </div>
