--- a/index.html
+++ b/index.html
@@ -10,10 +10,9 @@
 
     <style>
         body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #ffffff;
+            background:linear-gradient(orange,white,green);
+            background-repeat: no-repeat;
+            background-attachment: fixed;
         }
 
         header {
