--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
 <body>
     <header style="font-family: Halo;">
-        <h1>Riyan Upcoming Shah Rukh Khan Team</h1>
+        <h1>Team Tech Support</h1>
         <script src="https://accounts.google.com/gsi/client" async></script>
         <div id="g_id_onload" data-ux_mode="redirect"
             data-client_id="125257763090-kad4a17muhdr70ujqfchq20e3fc30jl9.apps.googleusercontent.com"
@@ -77,33 +77,12 @@
 
     </header>
 
-    <div class="container">
-        <h2 style="font-family: Halo; font-size: 70;">About Riyan</h2>
-        <p>Riyan is not just a regular team member; he's the embodiment of coolness. With his charismatic presence and
-            dedication, Riyan brings a unique energy to our team that's hard to match. Whether it's solving complex
-            problems or inspiring us with his creative ideas, Riyan always manages to keep things exciting. He's not
-            just a team member; he's the definition of cool!</p>
-    </div>
     <div class="container2">
-        <h2 style="color: white">Rehan is also Cool</h2>
-        <p style="color: white">Rehan is a hardworking diligent man </p>
-        <button class="favorite styled" type="button">Rehan is hardworking</button>
-    </div>
-    </div>
-    <div class="container2">
-        <h2 style="color:white">Our pics of Rehan</h2>
-        <img src="brami.png" alt="Broke ass can't afford internet"> </img>
-        <img src="fanaa.jpg" alt="Broke ass can't afford internet"> </img>
-        <img src="mamooty.jpg" alt="Broke ass can't afford internet"> </img>
+        <img src="icon.png" alt="Broke ass can't afford internet"> </img>
+
     </div>
 
 
-
-    </div>
-    <div class="container3">
-        <h2 style="color:yellow" font_size=>Glorious Leader </h2>
-        <img src="jason.jpg" alt="Broke ass can't afford internet" height="400" width="600"> </img>
-    </div>
     <script>
         const googleSignInClientId = "125257763090-kad4a17muhdr70ujqfchq20e3fc30jl9.apps.googleusercontent.com"; // Replace with your actual client ID
 
