--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
             <div class="g_id_signin" data-type="standard" data-shape="pill" data-theme="filled_blue"
                 data-text="signup_with" data-size="large" data-logo_alignment="left"></div>
         </div>
+        <div class="w3-bar w3-black">
+            <a href="members.html" class="w3-bar-item w3-button" style="color: white;">The Team</a>
+            <a href="index.html" class="w3-bar-item w3-button" style="color: white;">Home</a>
+            <a href="projects.html" class="w3-bar-item w3-button" style="color: white;">Projects</a>
+          </div>
 
     </header>
 
