--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         h1{
             text-align: center;
             align-content: center;
-            font-family: PRICEDOWN;
+            font-family: NEVERSAYDIE;
             font-size: 8vw;
             max-height: 6vh;
         }
@@ -71,7 +71,7 @@
             background-color: green;
             padding: 8px 16px;
             text-decoration: none;
-            border-radius: 6;
+            border-radius: 16;
             border-color: black;
             border-style: inset;
             
@@ -98,8 +98,8 @@
                 data-text="signup_with" data-size="large" data-logo_alignment="left"></div>
         </div>
         <ul>
-            <li><a href = "members.html">Members</a></li>
             <li><a href = "index.html">Home</a></li>
+            <li><a href = "members.html">Our team</a></li>
             <li><a href = "projects.html">Our Projects</a></li>
         </ul>
         
