--- a/phptesting.html
+++ b/phptesting.html
@@ -91,21 +91,14 @@
 <body>
     <header>
         <div class="stark">
-            <h1>Team Tech Support</h1>
+            <h1>PHP TEAM RENDERING</h1>
         </div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="members.html">Our team</a></li>
             <li><a href="projects.html">Our Projects</a></li>
-            <li><a href="phptesting.html">PHP</a></li>
+            <li><a href="phptesting.html">phptesting</a>
         </ul>
 
     </header>
-
-    <div class="logocontainer">
-        <img src="icon.png" alt="Broke ass can't afford internet" width="500" height="500"> </img>
-
-    </div>
 </body>
-
-</html>
