--- a/index.html
+++ b/index.html
@@ -85,6 +85,16 @@
             align-content: center;
             text-align: center;
         }
+        p{
+            font-family: RECHARGE;
+            font-size: 2vw;
+            color: green;
+            text-align: center;
+            border-style: groove;
+            border-radius: 14;
+            border-color: orange;
+            border-width: 2px;   
+        }
     </style>
 </head>
 
@@ -105,6 +115,10 @@
     <div class="logocontainer">
         <img src="icon.png" alt="Broke ass can't afford internet" width="500" height="500"> </img>
 
+    </div>
+    <div class="stark">
+        <p>Welcome to our Team Website!</p>
+        <p>We are students of Mr. Millard's 2nd Period AP CSP Class</p>
     </div>
 </body>
 
