--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="members.html">Our team</a></li>
             <li><a href="projects.html">Our Projects</a></li>
-            <li><a href="phptesting.html">PHP</a></li>
+            <li><a href="hello.php">PHP</a></li>
         </ul>
 
     </header>
